--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@
                   <h5 class="card-title">Suply 350 </h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
+                <div class="container d-flex align-items-center">
+                  <h2 class="ms-3">350$</h2>
+                  <button class="btn bg-warning  ms-3 me-3">Buy Now</button>
+                </div>
                 <div class="card-footer">
                   <small class="text-muted">Last updated 3 mins ago</small>
                 </div>
@@ -163,6 +167,10 @@
                 <div class="card-body">
                   <h5 class="card-title">Nike 360</h5>
                   <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="container d-flex align-items-center">
+                  <h2 class="ms-3">350$</h2>
+                  <button class="btn bg-warning  ms-3 me-3">Buy Now</button>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">Last updated 3 mins ago</small>
@@ -176,6 +184,11 @@
                   <h5 class="card-title">Red Airmax</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                 </div>
+                <div class="container d-flex align-items-center">
+                  <h2 class="ms-3">350$</h2>
+                  <button class="btn bg-warning  ms-3 me-3">Buy Now</button>
+                </div>
+                
                 <div class="card-footer">
                   <small class="text-muted">Last updated 3 mins ago</small>
                 </div>
@@ -193,6 +206,10 @@
                   <h5 class="card-title">Ison Backpack</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
+                <div class="container d-flex align-items-center">
+                  <h2 class="ms-3">350$</h2>
+                  <button class="btn bg-warning  ms-3 me-3">Buy Now</button>
+                </div>
                 <div class="card-footer">
                   <small class="text-muted">Last updated 3 mins ago</small>
                 </div>
@@ -205,6 +222,10 @@
                   <h5 class="card-title">Biaowang Backpack</h5>
                   <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                 </div>
+                <div class="container d-flex align-items-center">
+                  <h2 class="ms-3">350$</h2>
+                  <button class="btn bg-warning  ms-3 me-3">Buy Now</button>
+                </div>
                 <div class="card-footer">
                   <small class="text-muted">Last updated 3 mins ago</small>
                 </div>
@@ -216,6 +237,10 @@
                 <div class="card-body">
                   <h5 class="card-title">Dxyizu WS54 Smart</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="container d-flex align-items-center">
+                  <h2 class="ms-3">350$</h2>
+                  <button class="btn bg-warning  ms-3 me-3">Buy Now</button>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">Last updated 3 mins ago</small>
@@ -246,6 +271,10 @@
                   <h5 class="card-title">Nike 360</h5>
                   <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                 </div>
+                <div class="container d-flex align-items-center">
+                  <h2 class="ms-3">350$</h2>
+                  <button class="btn bg-warning  ms-3 me-3">Buy Now</button>
+                </div>
                 <div class="card-footer">
                   <small class="text-muted">Last updated 3 mins ago</small>
                 </div>
@@ -257,6 +286,10 @@
                 <div class="card-body">
                   <h5 class="card-title">Red Airmax</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="container d-flex align-items-center">
+                  <h2 class="ms-3">350$</h2>
+                  <button class="btn bg-warning  ms-3 me-3">Buy Now</button>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">Last updated 3 mins ago</small>
